[package]
name = "gameoflife"
version = "0.1.0"
authors = ["Timothy Morland <timothy.john.morland@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
crossterm = "0.25.0"
rand = "0.8.4"
tui = "0.19.0"
